better naming of units to wavelength

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 			<td><input type="text" id="pitchInput" oninput="updateValues(pitchInput)"></td>
 		</tr>
 		</tr>
-			<td>Sample time (samples)</td>
+			<td>Wavelength (samples)</td>
 			<td><input type="text" id="sampleTimeInput" oninput="updateValues(sampleTimeInput)"></td>
 		</tr>
 		</tr>
-			<td>Distance per Cycle (cm)</td>
+			<td>Wavelength (cm)</td>
 			<td><input type="text" id="distanceInput" oninput="updateValues(distanceInput)"></td>
 		</tr>
 	</table>
